--- a/.github/workflows/build-arm64-fixed.yml
+++ b/.github/workflows/build-arm64-fixed.yml
@@ -1,9 +1,9 @@
 name: Build RAGFlow 0.19.0 ARM64 Image (Fixed)
 
 on:
-  workflow_dispatch:  # 手动触发
+  workflow_dispatch: 
   push:
-    branches: [ main ]
+    branches: [ v0.19.0 ]
     paths:
       - '.github/workflows/build-arm64-fixed.yml'
 
